--- a/TestProjectApi/.gitignore
+++ b/TestProjectApi/.gitignore
@@ -1,12 +1,3 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
-
-namespace TestProjectApi
-{
-    internal class gitignore
-    {
-    }
-}
+﻿.vs/
+bin/
+obj/
